config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegram-bot
  labels:
    app: telegram-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegram-bot
  template:
    metadata:
      labels:
        app: telegram-bot
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: telegram-bot
          image: busybox
          command:
            - node
            - /app/bot.js
          livenessProbe:
            httpGet:
              path: /healthz
              port: 81
          readinessProbe:
            httpGet:
              path: /healthz
              port: 81
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 15m
              memory: 110Mi
            limits:
              cpu: "1"
              memory: 200Mi
