config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: telegram-bot
  labels:
    app: telegram-bot
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: telegram-bot
