config/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - blockchain-explorer.shopgrip.ru
      secretName: shopgrip-tls
  rules:
    - host: blockchain-explorer.shopgrip.ru
      http:
        paths:
          - path: /telegram-bot(/|$)(.*)
            backend:
              serviceName: telegram-bot
              servicePort: 80
